src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__pg_legacy_char__cast_pg_legacy_char_to_var_char.snap
---
source: src/expr/src/scalar/func/impls/pg_legacy_char.rs
expression: "#[sqlfunc(\n    sqlname = \"\\\"char\\\"_to_varchar\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(\n        super::CastStringToVarChar{fail_on_len:false,\n        length:Some(VarCharMaxLength::try_from(1).unwrap()),\n        }\n    )\n)]\nfn cast_pg_legacy_char_to_var_char(\n    a: PgLegacyChar,\n) -> Result<VarChar<String>, EvalError> {\n    let mut buf = String::new();\n    format_pg_legacy_char(&mut buf, a.0)?;\n    Ok(VarChar(buf))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastPgLegacyCharToVarChar;
impl crate::func::EagerUnaryFunc for CastPgLegacyCharToVarChar {
    type Input<'a> = PgLegacyChar;
    type Output<'a> = Result<VarChar<String>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_pg_legacy_char_to_var_char(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(
            super::CastStringToVarChar { fail_on_len : false, length :
            Some(VarCharMaxLength::try_from(1).unwrap()), }
        )
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastPgLegacyCharToVarChar {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("\"char\"_to_varchar")
    }
}
fn cast_pg_legacy_char_to_var_char(
    a: PgLegacyChar,
) -> Result<VarChar<String>, EvalError> {
    let mut buf = String::new();
    format_pg_legacy_char(&mut buf, a.0)?;
    Ok(VarChar(buf))
}
